kubernetes/resources/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  <APP>
  namespace: <NAMESPACE>
  labels:
    app:  <APP>
spec:
  selector:
    matchLabels:
      app: <APP>
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  <APP>
    spec:
      containers:
      - name:  <APP>
        image:  <IMAGE>
        lifecycle:
          preStop:
            exec:
              command: ["sleep", "45"]
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        livenessProbe:
          exec:
            command:
              - /bin/sh
              - -c
              - |
                curl -f http://localhost:8080/healthcheck || exit 1
          initialDelaySeconds: 5
          timeoutSeconds: 30
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          exec:
            command:
              - /bin/sh
              - -c
              - |
                curl -f http://localhost:8080/healthcheck || exit 1
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort: 8080
          name:  <APP>
        volumeMounts:
        - name: localtime
          mountPath: /etc/localtime
        - name: cache
          mountPath: /mnt/efs/unicorn-cache/
          
      volumes:
        - name: localtime
          hostPath:
            path: /usr/share/zoneinfo/Asia/Shanghai
        - name: cache
          persistentVolumeClaim:
            claimName: efs-claim
          
      restartPolicy: Always
