kubernetes/resources/service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-port: "8080"
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=60
  name: <APP>
  namespace: <NAMESPACE>
spec:
  selector:
    app: MYAPP
  type: ClusterIP
  ports:
  - name: MYAPP
    protocol: TCP
    port: 8080
    targetPort: 8080
